[package]
name = "lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.12.2"
blake3 = "1.0.0"  
byteorder = "1.3.4"
chrono = { version="0.4.19" }
ciborium = "0.2.0"
const_format = "0.2.13"
conv = "0.3.3"
coset = "0.3.1"
extfmt = "0.1.1"
hex = "0.4.3"
image = "0.23.10"
img-parts = "0.2.3"
log = "0.4.8"
multibase = "0.9.0"
multihash = "0.11.4"
nom = "6.0"
quick-xml = "0.20.0"
range-set = "0.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
serde_cbor = "0.11.1"
serde_derive = "1.0.127"
serde_json = "1.0.66"
serde-transcode = "1.1.1"
sha2 = "0.9.5"
tempfile = "3.1.0"
thiserror = ">= 1.0.20, <1.0.26"
twoway = "0.2.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
x509-parser = "0.11.0"

bcder = "0.6.0"
bytes = "1.1.0"
cryptographic-message-syntax = "0.4.0"
ring = "0.16.20"
ureq = "*"
x509-certificate = "0.3.0"
openssl = { version = "0.10.31", features = ["vendored"], optional = true }

[dev-dependencies]
anyhow = "1.0.40"
env_logger = "0.7.1"
actix = "0.11.0"
